@@ -29,7 +29,7 @@
 
 #include <stdint.h>
 #include <stdlib.h>
-#include <chopstx.h>
+#include <chopstx-cortex-m.h>
 
 #include "board.h"
 
